# src/routes/util_routes.py
@@ -1,4 +1,4 @@
-from openapi_generator import OAIResponse, register_route
+from flask_spec_gen import openapi_generator as og
 from schemas.util_schema import NationalitiesSchema
 from utils import get_nationalities
 from flask import Blueprint, current_app
@@ -9,12 +9,12 @@ util_routes = Blueprint("utils", __name__)
 
 
 @util_routes.route("/nationalities", methods=["GET"])
-@register_route(
+@og.register_route(
     description="Returns a list of all available nationalities (49) and nat. groups (8) along with the amount of samples we have of them in our dataset.",
-    tags=["Utilities"],
+    tags=["Miscellaneous"],
     responses=[
-        OAIResponse(200, "Successfully retrieved nationalities", NationalitiesSchema),
-        OAIResponse(500, "Internal server error"),
+        og.OAIResponse(200, "Successfully retrieved nationalities", NationalitiesSchema),
+        og.OAIResponse(500, "Internal server error"),
     ],
 )
 def get_nationalities_route():
